--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/jack828/NodeDNSFilter/issues"
   },
-  "homepage": "https://github.com/jack828/NodeDNSFilter#readme"
+  "homepage": "https://github.com/jack828/NodeDNSFilter#readme",
+  "dependencies": {
+    "async": "^2.1.4",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "native-dns": "^0.7.0"
+  }
 }
