--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "native-dns": "^0.7.0"
+  },
+  "engines": {
+    "node": ">=6.9.0",
+    "npm": ">=2.15.0"
   }
 }
