--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
     "express": "^4.14.0",
     "native-dns": "^0.7.0"
   },
+  "devDependencies": {
+    "eslint": "^2.13.1",
+    "eslint-config-clock": "^1.2.0",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-standard": "^1.3.3",
+    "pug-lint": "^2.3.0",
+    "pug-lint-config-clock": "^2.0.0"
+  },
   "engines": {
     "node": ">=6.9.0",
     "npm": ">=2.15.0"
