--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "native-dns": "^0.7.0"
   },
   "devDependencies": {
