--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "native-dns": "^0.7.0"
+    "native-dns": "^0.7.0",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
