--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "native-dns": "^0.7.0",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
