--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Node based DNS filter",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "update": "node bin/update.js"
   },
   "repository": {
     "type": "git",
