--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "morgan": "^1.7.0",
     "native-dns": "^0.7.0",
     "pug": "^2.0.0-beta6",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "winston": "^2.3.0",
+    "winston-daily-rotate-file": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
