--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "description": "A Node based DNS filter",
   "main": "server.js",
-  "bin" : { "node-dns" : "./server.js" },
+  "engines": {
+    "node": ">=6.9.0",
+    "yarn": "~1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "node bin/update.js"
+    "update": "node bin/update.js",
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -36,11 +41,8 @@
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^1.3.3",
+    "nodemon": "^1.17.3",
     "pug-lint": "^2.3.0",
     "pug-lint-config-clock": "^2.0.0"
-  },
-  "engines": {
-    "node": ">=6.9.0",
-    "npm": ">=2.15.0"
   }
 }
